# event_analytics_platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  atlas.hcl  docker-compose.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml
benchmarks/: README.md  stage1_sync_ingestion.md  stage2_with_redis_stream.md
configs/valkey/: valkey.conf
db/migrations/postgres/: 20260109115848_initial.sql  20260111100045_initial.sql  20260114093856_create_event_table.sql  20260121050500_update_tables_structure.sql  atlas.sum
db/schema/postgres/: 01_project.sql  02_event.sql  project_table.sql
deploy/prometheus/: prometheus.yml
docs/adr/: 001-why-fastapi-framework.md  002-why-structlog.md  003-why-atlas.md  004-why-redis-stream.md  README.md
scripts/: seeder.py
src/app/: main.py
src/app/api/routers/: healthz.py
src/application/common/: error_response.py  uow.py
src/application/event/schemas/: ingest_dto.py  response_dto.py
src/application/event/services/: ingest.py  ingest_batch.py
src/application/events/schemas/: ingest_dto.py
src/application/events/services/: ingest.py
src/application/project/schemas/: create_dto.py  response_dto.py
src/application/project/services/: create.py
src/application/worker/: batch_processor.py  graceful_killer.py  loop.py
src/domain/: exceptions.py  types.py
src/domain/cache/: repository.py
src/domain/event/: consumer.py  exceptions.py  models.py  producer.py  repository.py  types.py
src/domain/exceptions/: app.py  base.py
src/domain/project/: exceptions.py  models.py  ports.py  repository.py  types.py
src/domain/utils/: formatting.py  generate_api_key.py  generate_uuid.py
src/entrypoint/api/: exceptions.py  lifespan.py  main.py
src/entrypoint/api/dependencies/: current_project_id.py
src/entrypoint/api/middleware/: exception_handler.py  logger.py
src/entrypoint/api/routers/: health.py  healthz.py
src/entrypoint/api/routers/v1/ingestion/: event.py  project.py
src/entrypoint/worker/: main.py
src/infrastructure/cache/: in_memory.py  redis.py
src/infrastructure/config/: settings.py
src/infrastructure/database/postgres/: base.py  init.py  providers.py  uow.py
src/infrastructure/database/postgres/repositories/: event.py  project.py
src/infrastructure/di/: providers.py
src/infrastructure/di/providers/: api_key.py  application.py  cache.py  logger.py  postgres.py  rate_limit.py  security.py  settings.py  stream.py  types.py  worker.py
src/infrastructure/logger/: setup.py
src/infrastructure/metrics/: worker.py
src/infrastructure/rate_limit/: __init__.py  config.py  dependencies.py  fastapi_dependency.py  types.py
src/infrastructure/security/: dependencies.py
src/infrastructure/security/token_validators/: base.py  secret_token_validator.py
src/infrastructure/serialization/: object_to_dict.py
src/infrastructure/stream/: mapper.py  redis_consumer.py  redis_producer.py
src/infrastructure/utils/: retries.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/project/: test_create_project.py
tests/integrations/: conftest.py
tests/integrations/cache/: test_in_memory.py  test_redis.py
tests/integrations/di/: test_worker_provider.py
tests/integrations/e2e/event/: test_ingest_event.py  test_ingest_event_batch.py
tests/integrations/e2e/project/: test_create_project.py  test_project_auth.py
tests/integrations/repositories/postgres/: test_event.py  test_project.py
tests/integrations/stream/: test_redis_consumer.py  test_redis_producer.py  test_redis_retry.py
tests/load/: README.md  __init__.py  base.py  data_generator.py  helpers.py  locustfile.py
tests/unit/: conftest.py
tests/unit/application/event/schemas/: test_ingest_dto.py  test_response_dto.py
tests/unit/application/event/services/: test_ingest_event.py  test_ingest_event_batch.py
tests/unit/application/project/schemas/: test_create_project_dto.py
tests/unit/application/project/services/: test_create_project.py
tests/unit/application/worker/: test_batch_processor.py  test_killer.py  test_loop.py
tests/unit/domain/event/: test_models.py
tests/unit/domain/project/: test_models.py
tests/unit/domain/project/services/: test_create_project.py
tests/unit/domain/utils/: test_formatting.py  test_generate_api_key.py
tests/unit/entrypoint/api/: test_exceptions.py
tests/unit/entrypoint/api/middleware/: test_logger.py
tests/unit/infrastructure/rate_limit/: test_config.py  test_dependencies.py  test_fastapi_dependency.py  test_rate_limiter.py
tests/unit/infrastructure/security/: test_dependencies.py  test_secret_token_validator.py
